<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtDeskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Deskripsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beratBadan"
        app:layout_constraintBottom_toBottomOf="@+id/edit_beratBadan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_beratBadan" />

    <EditText
        android:id="@+id/edit_beratBadan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDeskripsi" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinggiBadan"
        app:layout_constraintBottom_toBottomOf="@+id/edit_tinggiBadan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_tinggiBadan" />

    <EditText
        android:id="@+id/edit_tinggiBadan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_beratBadan" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/jenisKelamin"
        app:layout_constraintBottom_toBottomOf="@+id/RadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/RadioGroup" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/edit_tinggiBadan"
        app:layout_constraintTop_toBottomOf="@+id/edit_tinggiBadan">

        <RadioButton
            android:id="@+id/radio_pria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pria" />

        <RadioButton
            android:id="@+id/radio_wanita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wanita" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:text="@string/hitung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/btnSave"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/txtResultBmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        android:layout_marginTop="@dimen/horizontal_margin"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:text="BMI : 24,09" />

    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/txtResultBmi"
        app:layout_constraintStart_toStartOf="@+id/txtResultBmi"
        android:layout_marginTop="@dimen/horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/txtResultBmi"
        tools:text="Kategory : Ideal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>